--- a/melatonin.html
+++ b/melatonin.html
@@ -6,6 +6,7 @@
 <title>Melatonin – hurdo la’aan</title>
 
 <style>
+/* ===== Theme (NO external files) ===== */
 :root{
   --accent:#00a676;
   --c1:#0066cc;
@@ -90,9 +91,9 @@ a.back span{ font-size:1.1rem; }
 .section-icon.ramadan{ background:#e0f7fa; }
 .section-icon.food{ background:#f1f8e9; }
 .section-icon.store{ background:#edeff9; }
+.section-icon.drink{ background:#e0f7fa; }
 
 .section-title{ font-weight:700; color:#123047; font-size:0.96rem; }
-
 .section ul{ margin:0 0 4px 18px; padding-left:0; font-size:0.92rem; }
 .section li{ margin-bottom:4px; }
 .highlight{ font-weight:600; }
@@ -143,6 +144,7 @@ a.back span{ font-size:1.1rem; }
       <div class="badge" id="badgeText">Akhris kooban</div>
     </div>
 
+    <!-- 1 -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon use">💊</div>
@@ -151,6 +153,7 @@ a.back span{ font-size:1.1rem; }
       <ul id="sec0List"></ul>
     </div>
 
+    <!-- 2 -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon use">✔</div>
@@ -159,6 +162,7 @@ a.back span{ font-size:1.1rem; }
       <ul id="sec1List"></ul>
     </div>
 
+    <!-- 3 -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon dose">⏰</div>
@@ -167,6 +171,7 @@ a.back span{ font-size:1.1rem; }
       <ul id="sec2List"></ul>
     </div>
 
+    <!-- 4 -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon food">🍽️</div>
@@ -175,6 +180,7 @@ a.back span{ font-size:1.1rem; }
       <ul id="sec3List"></ul>
     </div>
 
+    <!-- 5 -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon warn">!</div>
@@ -183,6 +189,7 @@ a.back span{ font-size:1.1rem; }
       <ul id="sec4List"></ul>
     </div>
 
+    <!-- 6 -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon side">⚠️</div>
@@ -191,6 +198,7 @@ a.back span{ font-size:1.1rem; }
       <ul id="sec5List"></ul>
     </div>
 
+    <!-- 7 -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon interact">⇆</div>
@@ -199,6 +207,7 @@ a.back span{ font-size:1.1rem; }
       <ul id="sec6List"></ul>
     </div>
 
+    <!-- 8 -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon ramadan">☾</div>
@@ -207,6 +216,7 @@ a.back span{ font-size:1.1rem; }
       <ul id="sec7List"></ul>
     </div>
 
+    <!-- 9 -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon store">⧉</div>
@@ -268,11 +278,6 @@ function fillList(id, arr){
   });
 }
 
-function setText(id, value){
-  const el = document.getElementById(id);
-  if (el) el.textContent = value || "";
-}
-
 const T = {
   so: {
     pageTitle: "Melatonin – hurdo la’aan",
@@ -287,28 +292,28 @@ const T = {
     sec0Title: "Waa maxay Melatonin?",
     sec0: [
       "Melatonin waa <span class='highlight'>hormoon dabiici ah</span> oo jirku sameeyo habeenkii si uu u caawiyo hurdada.",
-      "Daawada melatonin waxay caawisaa in <span class='highlight'>saacadda hurdada</span> ay hagaagto."
+      "Daawada melatonin waxay caawisaa in <span class='highlight'>saacadda hurdada</span> (døgnrytme) ay hagaagto."
     ],
     sec1Title: "Maxaa loo isticmaalaa?",
     sec1: [
-      "Hurdo la’aan ama hurdada oo soo daahda.",
-      "Dhibaatada saacadda hurdada (tusaale: jetlag ama jadwal hurdo oo is beddela)."
+      "Hurdo la’aan (insomni) ama hurdada oo soo daahda.",
+      "Dhibaatada saacadda hurdada (tusaale: jetlag ama dhalinyaro/waayeel qaarkood)."
     ],
     sec2Title: "Sida loo qaato",
     sec2: [
       "Raac qiyaasta dhakhtarka. Badanaa waxaa la qaataa <span class='highlight'>30–60 daqiiqo ka hor hurdada</span>.",
-      "Haddii ay tahay kiniin si tartiib ah u sii daaya (extended-release), <span class='highlight'>liq oo ha jebin/ruugin</span>.",
+      "Qaarkood (depottablet) waa in la liqaa oo aan la burburin/jeexin.",
       "Haddii aysan wax tar muuqan 1–2 toddobaad, la hadal dhakhtarka/farmashiyaha."
     ],
     sec3Title: "Cunto iyo cabitaan",
     sec3: [
-      "Waxaa la qaadan karaa cunto la’aan ama cunto la jirta, laakiin qaado <span class='highlight'>wakhti joogto ah</span> habeen kasta.",
-      "Ka fogow kafeyn fiidkii (qaxwo, shaah xooggan, energy drink)."
+      "Waxaa la qaadan karaa cunto la’aan ama cunto la jirta, laakiin isku day <span class='highlight'>wakhti joogto ah</span> habeen kasta.",
+      "Ka fogow kafeyn (qaxwo/shaah xooggan/energy) fiidkii."
     ],
     sec4Title: "Digniino",
     sec4: [
-      "Waxay keeni kartaa hurdo – ha wadin gaari haddii aad dareento hurdo ama dawakh.",
-      "Ha isku darin <span class='highlight'>khamri</span> (waxay kordhin kartaa hurdo/dawakh).",
+      "Waxay keeni kartaa hurdo – ha wadin gaari haddii aad dareento hurdo/dawakh.",
+      "Ha isku darin khamri (waxay kordhin kartaa hurdo/dawakh).",
       "U sheeg dhakhtarka haddii aad uur leedahay/nuujinayso ama aad qabto xanuun beerka ah."
     ],
     sec5Title: "Dhibaatooyinka",
@@ -320,19 +325,20 @@ const T = {
     sec6Title: "Is-dhexgalka daawooyinka",
     sec6: [
       "Daawooyinka hurdo-dejiya kale waxay kordhin karaan hurdo.",
-      "Daawooyin qaar waxay u baahan karaan la-talin – u sheeg farmashiyaha/dhakhtarka wax kasta oo aad qaadato."
+      "Daawooyin qaar (tusaale anticoagulants, antidepressants qaarkood) waxay u baahan karaan la-talin – u sheeg farmashiyaha wax kasta oo aad qaadato."
     ],
     sec7Title: "Ramadaanka iyo daawada",
     sec7: [
-      "Haddii aad sooman tahay, badanaa melatonin waxaa la qaataa <span class='highlight'>fiidkii</span> marka aad diyaar u tahay hurdo.",
+      "Haddii aad sooman tahay, badanaa melatonin waxaa la qaataa <span class='highlight'>fiidkii (afurka kadib)</span> marka aad diyaar u tahay hurdo.",
       "Haddii jadwalka hurdada is beddelo, la hadal dhakhtarka qorshe ku habboon."
     ],
     sec8Title: "Kaydinta",
     sec8: [
       "Ku hay meel ka fog carruurta, heerkulka qolka, oo ka ilaali iftiin/huur.",
       "Ha qaadan haddii ay dhaafto “EXP”.",
-      "Wixii soo haray ku celi farmashiyaha."
+      "Wixii soo haray → ku celi farmashiyaha."
     ],
+
     footer1: "Haddii aad u baahan tahay faahfaahin dheeraad ah, la xiriir farmashiyaha ama dhakhtarkaaga.",
     footer2: "(Hvis du har brug for mere information, kontakt dit lokale apotek eller din egen læge.)<br/><br/>Qoraalkan waxaa diyaariyay farmashiiste: Ibraahim Dahir Xanaf<br/>(Dette materiale er udviklet af farmakonomen: Ibrahim Dahir Hanaf)"
   },
@@ -360,7 +366,7 @@ const T = {
     sec2Title: "Sådan tages medicinen",
     sec2: [
       "Følg lægens plan. Ofte tages det <span class='highlight'>30–60 minutter før sengetid</span>.",
-      "Depot-tabletter skal typisk synkes hele (må ikke knuses/deles/tygges).",
+      "Depot-tabletter skal typisk synkes hele (må ikke knuses/deles).",
       "Kontakt læge/apotek hvis effekten udebliver efter 1–2 uger."
     ],
     sec3Title: "Mad og drikke",
@@ -391,6 +397,7 @@ const T = {
       "Opbevares utilgængeligt for børn, ved stuetemperatur og beskyttet mod lys/fugt.",
       "Brug ikke efter “EXP”. Aflever rester på apoteket."
     ],
+
     footer1: "Hvis du har brug for mere information, kontakt apoteket eller din læge.",
     footer2: "Udarbejdet af farmakonomen: Ibrahim Dahir Hanaf"
   },
@@ -415,7 +422,7 @@ const T = {
     sec2Title: "How to take",
     sec2: [
       "Follow your doctor’s plan. Often taken <span class='highlight'>30–60 minutes before bedtime</span>.",
-      "Extended-release tablets should usually be swallowed whole (do not crush/split).",
+      "Extended-release tablets should usually be swallowed whole.",
       "Contact your doctor/pharmacy if there is no benefit after 1–2 weeks."
     ],
     sec3Title: "Food and drink",
@@ -433,6 +440,7 @@ const T = {
     sec7: ["Often taken in the evening (after iftar) when you are ready to sleep.", "If your sleep pattern changes, ask a doctor for a plan."],
     sec8Title: "Storage",
     sec8: ["Keep out of reach of children, store at room temperature protected from light/moisture.", "Do not use after “EXP”. Return leftovers to the pharmacy."],
+
     footer1: "If you need more information, contact your pharmacy or doctor.",
     footer2: "Prepared by pharmaconomist: Ibrahim Dahir Hanaf"
   },
@@ -457,7 +465,7 @@ const T = {
     sec2Title: "طريقة الاستعمال",
     sec2: [
       "اتبع خطة الطبيب. غالباً يؤخذ <span class='highlight'>قبل النوم بـ 30–60 دقيقة</span>.",
-      "الأقراص ممتدة المفعول تُبلع كاملة (لا تُسحق ولا تُقسم).",
+      "الأقراص ممتدة المفعول تُبلع كاملة.",
       "راجع الطبيب/الصيدلية إذا لم تتحسن خلال 1–2 أسبوع."
     ],
     sec3Title: "الطعام والشراب",
@@ -472,6 +480,7 @@ const T = {
     sec7: ["غالباً يُؤخذ مساءً بعد الإفطار عندما تكون مستعداً للنوم.", "إذا تغير نمط نومك فاطلب خطة من الطبيب."],
     sec8Title: "الحفظ",
     sec8: ["يحفظ بعيداً عن الأطفال وفي درجة حرارة الغرفة وبعيداً عن الضوء/الرطوبة.", "لا يستخدم بعد “EXP”. أعد البقايا إلى الصيدلية."],
+
     footer1: "للمزيد من المعلومات تواصل مع الصيدلية أو طبيبك.",
     footer2: "إعداد: إبراهيم ظاهر حنف (اختصاصي صيدلة)"
   },
@@ -491,7 +500,7 @@ const T = {
     sec1Title: "Ne için kullanılır?",
     sec1: ["Uykuya dalma güçlüğü.", "Biyolojik saat bozukluğu (jetlag vb.)."],
     sec2Title: "Nasıl alınır?",
-    sec2: ["Doktor planına uyun. Genelde <span class='highlight'>yatmadan 30–60 dk önce</span> alınır.", "Uzatılmış salım tabletleri genelde bütün yutun (ezmeyin/bölmeyin).", "1–2 haftada fayda yoksa doktor/eczane ile görüşün."],
+    sec2: ["Doktor planına uyun. Genelde <span class='highlight'>yatmadan 30–60 dk önce</span> alınır.", "Uzatılmış salım tabletler genelde bütün yutulur.", "1–2 haftada fayda yoksa doktor/eczane ile görüşün."],
     sec3Title: "Yemek ve içecek",
     sec3: ["Yemekle veya yemeksiz alınabilir – her akşam <span class='highlight'>aynı saatte</span> almaya çalışın.", "Geç saatlerde kafeinden kaçının."],
     sec4Title: "Uyarılar",
@@ -504,6 +513,7 @@ const T = {
     sec7: ["Genelde iftardan sonra, uyumaya hazırken alınır.", "Uyku düzeni değişirse doktorla plan yapın."],
     sec8Title: "Saklama",
     sec8: ["Çocuklardan uzak, oda sıcaklığında, ışıktan/nemden koruyun.", "“EXP” sonrası kullanmayın. Artanları eczaneye verin."],
+
     footer1: "Daha fazla bilgi için eczane veya doktorunuza başvurun.",
     footer2: "Hazırlayan: farmakonomist Ibrahim Dahir Hanaf"
   },
@@ -523,7 +533,7 @@ const T = {
     sec1Title: "کس لیے استعمال ہوتا ہے؟",
     sec1: ["نیند آنے میں مشکل۔", "جسمانی گھڑی کی خرابی (جیٹ لیگ وغیرہ)۔"],
     sec2Title: "طریقہ استعمال",
-    sec2: ["ڈاکٹر کے مطابق۔ عام طور پر <span class='highlight'>سونے سے 30–60 منٹ پہلے</span>۔", "ایکسٹینڈڈ ریلیز گولی عموماً پوری نگلیں (نہ توڑیں/نہ پیسیں)۔", "1–2 ہفتے میں فائدہ نہ ہو تو ڈاکٹر/فارمیسی سے رابطہ کریں۔"],
+    sec2: ["ڈاکٹر کے مطابق۔ عام طور پر <span class='highlight'>سونے سے 30–60 منٹ پہلے</span>۔", "ایکسٹینڈڈ ریلیز گولی عموماً پوری نگلیں۔", "1–2 ہفتے میں فائدہ نہ ہو تو ڈاکٹر/فارمیسی سے رابطہ کریں۔"],
     sec3Title: "کھانا پینا",
     sec3: ["کھانے کے ساتھ یا بغیر – ہر رات <span class='highlight'>ایک ہی وقت</span> پر لیں۔", "رات دیر سے کیفین سے پرہیز کریں۔"],
     sec4Title: "احتیاطیں",
@@ -536,6 +546,7 @@ const T = {
     sec7: ["اکثر افطار کے بعد جب نیند کے لیے تیار ہوں تب لیا جاتا ہے۔", "اگر نیند کا شیڈول بدلے تو ڈاکٹر سے پلان کریں۔"],
     sec8Title: "محفوظ رکھنا",
     sec8: ["بچوں سے دور، کمرہ درجہ حرارت پر، روشنی/نمی سے بچائیں۔", "“EXP” کے بعد استعمال نہ کریں۔ بچی دوا فارمیسی کو دیں۔"],
+
     footer1: "مزید معلومات کے لیے فارمیسی یا ڈاکٹر سے رابطہ کریں۔",
     footer2: "مرتب کردہ: فارماکونومسٹ ابراہیم ظاہر حنف"
   },
@@ -555,7 +566,7 @@ const T = {
     sec1Title: "موارد مصرف",
     sec1: ["مشکل در به خواب رفتن.", "اختلال ریتم شبانه‌روزی (مثل جت‌لگ)."],
     sec2Title: "نحوه مصرف",
-    sec2: ["طبق دستور پزشک. معمولاً <span class='highlight'>۳۰–۶۰ دقیقه قبل از خواب</span>.", "قرص آهسته‌رهش را کامل قورت دهید (خرد/نصف نکنید).", "اگر طی ۱–۲ هفته بهتر نشدید، با پزشک/داروخانه تماس بگیرید."],
+    sec2: ["طبق دستور پزشک. معمولاً <span class='highlight'>۳۰–۶۰ دقیقه قبل از خواب</span>.", "قرص آهسته‌رهش را کامل قورت دهید.", "اگر طی ۱–۲ هفته بهتر نشدید، با پزشک/داروخانه تماس بگیرید."],
     sec3Title: "غذا و نوشیدنی",
     sec3: ["با غذا یا بدون غذا – سعی کنید هر شب <span class='highlight'>در زمان ثابت</span> مصرف کنید.", "کافئین را دیر وقت مصرف نکنید."],
     sec4Title: "هشدارها",
@@ -568,6 +579,7 @@ const T = {
     sec7: ["اغلب بعد از افطار و وقتی آماده خواب هستید مصرف می‌شود.", "اگر الگوی خواب تغییر کرد، با پزشک برنامه‌ریزی کنید."],
     sec8Title: "نگهداری",
     sec8: ["دور از دسترس کودکان، در دمای اتاق و دور از نور/رطوبت.", "پس از “EXP” مصرف نشود. باقی‌مانده را به داروخانه تحویل دهید."],
+
     footer1: "برای اطلاعات بیشتر با داروخانه یا پزشک خود تماس بگیرید.",
     footer2: "تهیه‌کننده: فارماکونومیست ابراهیم ظاهر حنف"
   },
@@ -587,7 +599,7 @@ const T = {
     sec1Title: "برای چی استفاده می‌شود؟",
     sec1: ["مشکل در خواب رفتن.", "اختلال ریتم شبانه‌روزی (مثل جت‌لگ)."],
     sec2Title: "چگونه گرفته شود؟",
-    sec2: ["طبق دستور داکتر. معمولاً <span class='highlight'>۳۰–۶۰ دقیقه قبل از خواب</span>.", "قرص آهسته‌رهش را کامل قورت دهید (خرد/نصف نکنید).", "اگر طی ۱–۲ هفته بهتر نشدید، با داکتر/دواخانه تماس بگیرید."],
+    sec2: ["طبق دستور داکتر. معمولاً <span class='highlight'>۳۰–۶۰ دقیقه قبل از خواب</span>.", "قرص آهسته‌رهش را کامل قورت دهید.", "اگر طی ۱–۲ هفته بهتر نشدید، با داکتر/دواخانه تماس بگیرید."],
     sec3Title: "غذا و نوشیدنی",
     sec3: ["با غذا یا بدون غذا – هر شب <span class='highlight'>در یک وقت ثابت</span> بگیرید.", "کافئین را ناوقت نخورید."],
     sec4Title: "هشدارها",
@@ -600,6 +612,7 @@ const T = {
     sec7: ["اکثر بعد از افطار و وقتی آماده خواب هستید گرفته می‌شود.", "اگر خواب تغییر کرد، با داکتر پلان بسازید."],
     sec8Title: "نگهداری",
     sec8: ["دور از دسترس اطفال، در دمای اتاق و دور از نور/رطوبت.", "بعد از “EXP” استفاده نشود. باقی‌مانده را به دواخانه بسپارید."],
+
     footer1: "برای معلومات بیشتر با دواخانه یا داکتر خود تماس بگیرید.",
     footer2: "تهیه‌کننده: فارماکونومیست ابراهیم ظاهر حنف"
   },
@@ -619,7 +632,7 @@ const T = {
     sec1Title: "د څه لپاره کارېږي؟",
     sec1: ["د خوب ته تللو ستونزه.", "د ورځ/شپې ریتم ګډوډي (jet lag)."],
     sec2Title: "څنګه واخیستل شي؟",
-    sec2: ["د ډاکټر له مخې. اکثر <span class='highlight'>۳۰–۶۰ دقیقې د خوب مخکې</span>.", "آهسته‌خوشې کېدونکې ګولۍ بشپړه تېر کړئ (مه ماتوئ/مه میچوئ).", "که ۱–۲ اونیو کې ګټه نه وي، ډاکټر/درملتون سره خبرې وکړئ."],
+    sec2: ["د ډاکټر له مخې. اکثر <span class='highlight'>۳۰–۶۰ دقیقې د خوب مخکې</span>.", "آهسته‌خوشې کېدونکې ګولۍ بشپړه تېر کړئ.", "که ۱–۲ اونیو کې ګټه نه وي، ډاکټر/درملتون سره خبرې وکړئ."],
     sec3Title: "خواړه او څښاک",
     sec3: ["له خوړو سره یا بې خوړو – هره شپه <span class='highlight'>په یو ثابت وخت</span> واخلئ.", "ناوخته کافین مه څښئ."],
     sec4Title: "خبرداری",
@@ -632,6 +645,7 @@ const T = {
     sec7: ["اکثر له افطار وروسته، کله چې د خوب لپاره تیار یاست اخیستل کېږي.", "که د خوب نظم بدل شي، ډاکټر سره پلان جوړ کړئ."],
     sec8Title: "ساتنه",
     sec8: ["له ماشومانو لرې، د خونې په تودوخې کې او له رڼا/رطوبت څخه خوندي.", "له “EXP” وروسته مه کاروئ. پاتې درمل درملتون ته وسپارئ."],
+
     footer1: "د نورو معلوماتو لپاره له درملتون یا خپل ډاکټر سره اړیکه ونیسئ.",
     footer2: "چمتو کوونکی: فارمکونومېسټ ابراهیم ظاهر حنف"
   }
@@ -644,25 +658,24 @@ function applyLang(lang){
   setDirLang(lang);
 
   document.title = d.pageTitle;
+  document.getElementById("hdrH1").textContent = d.hdrH1;
+  document.getElementById("hdrP").textContent = d.hdrP;
+  document.getElementById("backText").textContent = d.backText;
+  document.getElementById("langLabel").textContent = d.langLabel;
 
-  setText("hdrH1", d.hdrH1);
-  setText("hdrP", d.hdrP);
-  setText("backText", d.backText);
-  setText("langLabel", d.langLabel);
+  document.getElementById("drugName").textContent = d.drugName;
+  document.getElementById("drugForm").textContent = d.drugForm;
+  document.getElementById("badgeText").textContent = d.badgeText;
 
-  setText("drugName", d.drugName);
-  setText("drugForm", d.drugForm);
-  setText("badgeText", d.badgeText);
-
-  setText("sec0Title", d.sec0Title);
-  setText("sec1Title", d.sec1Title);
-  setText("sec2Title", d.sec2Title);
-  setText("sec3Title", d.sec3Title);
-  setText("sec4Title", d.sec4Title);
-  setText("sec5Title", d.sec5Title);
-  setText("sec6Title", d.sec6Title);
-  setText("sec7Title", d.sec7Title);
-  setText("sec8Title", d.sec8Title);
+  document.getElementById("sec0Title").textContent = d.sec0Title;
+  document.getElementById("sec1Title").textContent = d.sec1Title;
+  document.getElementById("sec2Title").textContent = d.sec2Title;
+  document.getElementById("sec3Title").textContent = d.sec3Title;
+  document.getElementById("sec4Title").textContent = d.sec4Title;
+  document.getElementById("sec5Title").textContent = d.sec5Title;
+  document.getElementById("sec6Title").textContent = d.sec6Title;
+  document.getElementById("sec7Title").textContent = d.sec7Title;
+  document.getElementById("sec8Title").textContent = d.sec8Title;
 
   fillList("sec0List", d.sec0);
   fillList("sec1List", d.sec1);
@@ -674,7 +687,7 @@ function applyLang(lang){
   fillList("sec7List", d.sec7);
   fillList("sec8List", d.sec8);
 
-  setText("footer1", d.footer1);
+  document.getElementById("footer1").textContent = d.footer1;
   document.getElementById("footer2").innerHTML = d.footer2;
 
   const backA = document.querySelector("a.back");
@@ -682,15 +695,12 @@ function applyLang(lang){
   backA.setAttribute("href", base + "?lang=" + encodeURIComponent(lang));
 }
 
-/* Start language from ?lang= */
 const params = new URLSearchParams(window.location.search);
 const startLang = params.get("lang") || "so";
+document.getElementById("langSelect").value = (T[startLang] ? startLang : "so");
+applyLang(document.getElementById("langSelect").value);
 
-const sel = document.getElementById("langSelect");
-sel.value = (T[startLang] ? startLang : "so");
-applyLang(sel.value);
-
-sel.addEventListener("change", function(){
+document.getElementById("langSelect").addEventListener("change", function(){
   applyLang(this.value);
 });
 </script>
