--- a/ventoline.html
+++ b/ventoline.html
@@ -75,7 +75,6 @@ a.back span{ font-size:1.1rem; }
 .section{ margin-top:8px; padding-top:8px; border-top:1px dashed #d0d7e2; }
 .section-header{ display:flex; align-items:center; gap:8px; margin-bottom:4px; }
 .section-title{ font-weight:700; color:#123047; font-size:0.96rem; }
-.section-title small{ font-weight:400; color:#607089; }
 
 .section-icon{
   width:24px; height:24px; border-radius:999px;
@@ -458,7 +457,7 @@ const T = {
     footer2:"(Hvis du har brug for mere information, kontakt dit lokale apotek eller din egen læge.)<br/><br/>Qoraalkan waxaa diyaariyay farmashiiste: Ibraahim Dahir Xanaf<br/>(Dette materiale er udviklet af farmakonomen: Ibrahim Dahir Hanaf)"
   },
 
-  ar:{
+  ar:{ /* ... beholdt indholdet fra din fil, men uden parenteser i titler ... */
     pageTitle:"فنتولين – ضيق التنفس",
     hdrH1:"فنتولين – ضيق التنفس",
     hdrP:"معلومات مختصرة للمرضى وأفراد الأسرة.",
@@ -467,7 +466,6 @@ const T = {
     drugName:"فنتولين (سالبوتامول)",
     drugForm:"استنشاق (بخاخ/بودرة) سريع المفعول",
     badgeText:"مختصر وواضح",
-
     sec0Title:"ما هو فنتولين؟",
     sec0:[
       "فنتولين (سالبوتامول) دواء <span class='highlight'>سريع المفعول</span> يوسع الشعب الهوائية.",
@@ -498,17 +496,14 @@ const T = {
     sec6Title:"التداخلات",
     sec6:["بعض الأدوية قد تقلل المفعول مثل بعض حاصرات بيتا.","أخبر الصيدلي/الطبيب بكل أدويتك."],
     sec7Title:"رمضان",
-    sec7:[
-      "إذا كان لديك تساؤل ديني فاسأل إمامك والطبيب.",
-      "صحياً: استخدمه عند الحاجة—سلامتك أولاً."
-    ],
+    sec7:["إذا كان لديك تساؤل ديني فاسأل إمامك والطبيب.","صحياً: استخدمه عند الحاجة—سلامتك أولاً."],
     sec8Title:"الحفظ",
     sec8:["يحفظ بدرجة الغرفة وبعيداً عن الأطفال.","احمِ البخاخ من الحرارة والشمس.","تحقق من الصلاحية وعدد الجرعات."],
     footer1:"للمزيد من المعلومات تواصل مع الصيدلية أو طبيبك.",
     footer2:"إعداد: إبراهيم ظاهر حنف"
   },
 
-  tr:{
+  tr:{ /* ... */
     pageTitle:"Ventoline – nefes darlığı",
     hdrH1:"Ventoline – nefes darlığı",
     hdrP:"Hasta ve yakınları için kısa bilgi.",
@@ -517,17 +512,13 @@ const T = {
     drugName:"Ventoline (salbutamol)",
     drugForm:"İnhalasyon (sprey/toz) hızlı etkili",
     badgeText:"Kısa ve anlaşılır",
-
     sec0Title:"Ventoline nedir?",
     sec0:[
       "Hava yollarını açan <span class='highlight'>hızlı etkili</span> bir inhalerdir.",
       "Ani nefes darlığı ve hışıltıda rahatlatıcı olarak kullanılır."
     ],
     sec1Title:"Ne için kullanılır?",
-    sec1:[
-      "Astım ve KOAH’ta hızlı rahatlama.",
-      "Doktor önerirse egzersiz öncesi."
-    ],
+    sec1:["Astım ve KOAH’ta hızlı rahatlama.","Doktor önerirse egzersiz öncesi."],
     sec2Title:"Nasıl kullanılır?",
     sec2:[
       "Genellikle ihtiyaç halinde, reçeteye göre kullanılır.",
@@ -551,7 +542,7 @@ const T = {
     footer2:"Hazırlayan: Ibrahim Dahir Hanaf"
   },
 
-  ur:{
+  ur:{ /* ... */
     pageTitle:"وینٹولین – سانس کی تکلیف",
     hdrH1:"وینٹولین – سانس کی تکلیف",
     hdrP:"مریضوں اور اہلِ خانہ کے لیے مختصر معلومات۔",
@@ -560,17 +551,13 @@ const T = {
     drugName:"وینٹولین (سالبیوٹامول)",
     drugForm:"انہیلر (سپرے/پاؤڈر) تیز اثر",
     badgeText:"مختصر اور واضح",
-
     sec0Title:"وینٹولین کیا ہے؟",
     sec0:[
       "یہ <span class='highlight'>تیز اثر</span> انہیلر ہے جو سانس کی نالیاں کھولتا ہے۔",
       "اچانک سانس پھولنے یا ویزنگ میں بطور ریلیور استعمال ہوتا ہے۔"
     ],
     sec1Title:"کس لیے استعمال ہوتی ہے؟",
-    sec1:[
-      "دمہ اور COPD میں فوری آرام۔",
-      "اگر ڈاکٹر کہے تو ورزش سے پہلے۔"
-    ],
+    sec1:["دمہ اور COPD میں فوری آرام۔","اگر ڈاکٹر کہے تو ورزش سے پہلے۔"],
     sec2Title:"استعمال کا طریقہ",
     sec2:[
       "اکثر ضرورت کے وقت، اپنے پلان کے مطابق استعمال کریں۔",
@@ -594,7 +581,7 @@ const T = {
     footer2:"مرتب کردہ: ابراہیم ظاہر حنف"
   },
 
-  fa:{
+  fa:{ /* ... */
     pageTitle:"ونتولین – تنگی نفس",
     hdrH1:"ونتولین – تنگی نفس",
     hdrP:"اطلاعات کوتاه برای بیماران و خانواده‌ها.",
@@ -603,17 +590,13 @@ const T = {
     drugName:"ونتولین (سالبوتامول)",
     drugForm:"استنشاقی (اسپری/پودر) سریع‌الاثر",
     badgeText:"کوتاه و روشن",
-
     sec0Title:"ونتولین چیست؟",
     sec0:[
       "داروی استنشاقی <span class='highlight'>سریع‌الاثر</span> برای باز کردن راه‌های هوایی است.",
       "برای حمله ناگهانی تنگی نفس/خس‌خس استفاده می‌شود."
     ],
     sec1Title:"موارد مصرف",
-    sec1:[
-      "تسکین سریع در آسم و COPD.",
-      "در صورت تجویز، قبل از ورزش."
-    ],
+    sec1:["تسکین سریع در آسم و COPD.","در صورت تجویز، قبل از ورزش."],
     sec2Title:"نحوه استفاده",
     sec2:[
       "معمولاً در صورت نیاز طبق برنامه.",
@@ -637,7 +620,7 @@ const T = {
     footer2:"تهیه‌کننده: ابراهیم ظاهر حنف"
   },
 
-  prs:{
+  prs:{ /* ... */
     pageTitle:"ونتولین – نفس‌تنگی",
     hdrH1:"ونتولین – نفس‌تنگی",
     hdrP:"معلومات کوتاه برای مریضان و خانواده‌ها.",
@@ -646,7 +629,6 @@ const T = {
     drugName:"ونتولین (سالبوتامول)",
     drugForm:"استنشاقی (سپری/پودر) سریع‌الاثر",
     badgeText:"کوتاه و واضح",
-
     sec0Title:"ونتولین چیست؟",
     sec0:["دوای سریع‌الاثر است که راه‌های هوا را باز می‌کند و در حمله نفس‌تنگی استفاده می‌شود."],
     sec1Title:"برای چی استفاده می‌شود؟",
@@ -674,7 +656,7 @@ const T = {
     footer2:"تهیه‌کننده: ابراهیم ظاهر حنف"
   },
 
-  ps:{
+  ps:{ /* ... */
     pageTitle:"ونټولین – ساه لنډي",
     hdrH1:"ونټولین – ساه لنډي",
     hdrP:"د ناروغانو او کورنۍ لپاره لنډ معلومات.",
@@ -683,7 +665,6 @@ const T = {
     drugName:"ونټولین (سالبوټامول)",
     drugForm:"استنشاق (سپری/پوډر) چټک اثر",
     badgeText:"لنډ او روښانه",
-
     sec0Title:"ونټولین څه شی دی؟",
     sec0:["چټک اثر استنشاقي درمل دي چې د ساه لارې خلاصوي او د ناڅاپي ساه لنډۍ لپاره کارېږي."],
     sec1Title:"د څه لپاره؟",
@@ -754,15 +735,20 @@ function applyLang(lang){
   const backA = document.querySelector("a.back");
   const base = backA.getAttribute("href").split("?")[0];
   backA.setAttribute("href", base + "?lang=" + encodeURIComponent(lang));
+
+  const url = new URL(window.location.href);
+  url.searchParams.set("lang", lang);
+  window.history.replaceState({}, "", url.toString());
 }
 
 const params = new URLSearchParams(window.location.search);
 const startLang = params.get("lang") || "da";
 
-document.getElementById("langSelect").value = (T[startLang] ? startLang : "da");
-applyLang(document.getElementById("langSelect").value);
+const sel = document.getElementById("langSelect");
+sel.value = (T[startLang] ? startLang : "da");
+applyLang(sel.value);
 
-document.getElementById("langSelect").addEventListener("change", function(){
+sel.addEventListener("change", function(){
   applyLang(this.value);
 });
 </script>
